Changes made before the start of class

--- a/01-HTML-Git-CSS/01-Activities/06-Stu_HTML/Unsolved/index.html
+++ b/01-HTML-Git-CSS/01-Activities/06-Stu_HTML/Unsolved/index.html
@@ -8,7 +8,34 @@
 
   <body>
     <!-- TODO: Write Your Code Below-->
+<h1>Student Bio</h1>
+<h2>Brandon Thompson</h2>
 
+<img 
+
+src="https://via.placeholder.com/200" alt="Brandon photo" 
+
+/>
+
+<p>
+  Talk about myself
+</p>
+
+<h2>Contact Info</h2>
+
+<p>
+   <ul>
+    <li><strong>Email:</strong>
+    <a href="mailto:brandonjoel.thompson@gmail.com">brandonjoel.thompson@gmail.com</a>
+    </li>
+    <li><strong>Github:</strong>
+      <a href="https://github.com/BJThompson12">BJ Repo</a>
+    </li>
+    <li><strong>Portfolio:</strong>
+      <a href="Portfolio Link">My Portfolio</a>
+    </li>
+  </ul>
+</p>
   </body>
 
 </html>
