--- a/01-HTML-Git-CSS/01-Activities/22-Stu_Mini-Project/Main/index.html
+++ b/01-HTML-Git-CSS/01-Activities/22-Stu_Mini-Project/Main/index.html
@@ -18,10 +18,10 @@
     </nav>
   </header>
 
-  <main>
+  <div>
     <h1 class="text-center">My New Website</h1>
     <figure>
-      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
+      <img src="./assets/images/image-1.png" alt="Self Portrait Coming Soon text">
       <figcaption class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</figcaption>
     </figure>
     <section id="contact">
@@ -42,7 +42,7 @@
         </div>
       </form>
     </section>
-  </main>
+  </div>
 
   <footer class="text-center">
     © 2022 My New Website Productions 
