--- a/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/index.html
+++ b/02-Advanced-CSS/01-Activities/16-Stu_Pseudo-Classes/Unsolved/index.html
@@ -38,6 +38,13 @@
         </div>
         <div class="resources">
           <!-- TODO: Add resource links -->
+          <h2>Show Resources</h2>
+        </div c">lass="links
+          <ul class="links">
+            <li>MDN web docs on responsive design</li>
+            <li>MDN web docs on using media queries</li>
+            <li>MDN web docs on flexbox</li>
+          </ul>
         </div>
       </article>
     </section>
